# viet-rp-glow

./: .env  .gitignore  BAO_CAO_DU_AN.md  CHARAGEN_NEW_PROMPTS.md  CHARAGEN_SYNC.sql  GLOBAL_SYSTEM_PROMPT_V2.md  KE_HOACH_TAI_CAU_TRUC.md  PROMPT_SYSTEM_KNOWLEDGE.md  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.ts  token-usage-context-plan.md  tsconfig.app.json  tsconfig.json  vietrp_animations_audit.md  vite.config.ts  vitest.config.ts
.claude/: ai_backend.md  settings.local.json  uxuirules.md
chat-proxy-rust/: Cargo.toml  Dockerfile
chat-proxy-rust/src/: auth.rs  db.rs  error.rs  key_pool.rs  main.rs  proxy.rs
db_bk/: banners-export-2026-02-26_13-51-25.csv  character_ratings-export-2026-02-26_13-51-50.csv  characters-export-2026-02-26_13-52-51.csv  chat_messages-export-2026-02-26_13-53-17.csv  chat_sessions-export-2026-02-26_13-53-37.csv  global_settings-export-2026-02-26_13-54-00.csv  knowledge_base-export-2026-02-26_13-54-18.csv  profiles-export-2026-02-26_13-54-36.csv  roadmap_items-export-2026-02-26_13-54-55.csv  user_favorites-export-2026-02-26_13-55-12.csv  user_roles-export-2026-02-26_13-55-29.csv
public/: manifest.json
src/: App.tsx  index.css
src/components/: AiCharGenContent.tsx  AppFooter.tsx  BottomNavBar.tsx  CardQualityScore.tsx  CharGenAssistant.tsx  CharacterCard.tsx  CharacterPreviewDialog.tsx  ChatHeader.tsx  ChatInput.tsx  ChatSidebar.tsx  CreatePageHeader.tsx  ErrorBoundary.tsx  GenerationSettings.tsx  LazyCharGenContent.tsx  NsfwToggle.tsx  (+8 more)
supabase/: config.toml
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
(+142 files in other folders)
